unpackaged/main/default/objects/Account/fields/abc_checkbox__c.field-meta.xml
<CustomField>
    <fullName>abc_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>abc checkbox</label>
    <type>Checkbox</type>
</CustomField>