unpackaged/main/default/objects/Account/fields/April_checkbox__c.field-meta.xml
<CustomField>
    <fullName>April_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>April checkbox</label>
    <type>Checkbox</type>
</CustomField>