unpackaged/main/default/objects/Account/fields/Demo_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Demo_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo checkbox</label>
    <type>Checkbox</type>
</CustomField>