unpackaged/main/default/objects/Account/fields/Jack_Textbox__c.field-meta.xml
<CustomField>
    <fullName>Jack_Textbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jack Textbox</label>
    <type>Checkbox</type>
</CustomField>