unpackaged/main/default/objects/Account/fields/Logged_in__c.field-meta.xml
<CustomField>
    <fullName>Logged_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logged in</label>
    <type>Checkbox</type>
</CustomField>