unpackaged/main/default/objects/Account/fields/Maria_Textbox__c.field-meta.xml
<CustomField>
    <fullName>Maria_Textbox__c</fullName>
    <label>Maria Textbox</label>
    <length>20</length>
    <type>Text</type>
</CustomField>